--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^8.15.0",
+    "@stagewise-plugins/react": "^0.5.2",
+    "@stagewise/toolbar-react": "^0.5.2",
     "@supabase/supabase-js": "^2.50.3",
+    "@types/dompurify": "^3.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.344.0",
     "motion": "^12.19.2",
@@ -24,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.0",
+    "react-router-dom": "^7.6.3",
     "react-speech-recognition": "^4.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
